# python-project-83

./: .gitignore  .ruff.toml  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: Makefile  app.py  checker.py  database.py  pyproject.toml
page_analyzer/templates/: base.html  index.html  url_detail.html  urls.html
